src/components/full-page-comps/styles/productid.module.css
.container{
    max-width: 900px;
    margin: auto;
    padding-bottom: 10rem;
}


.carDiv {
    margin-bottom: 30px;
    margin-top: 20px;
    width: 100%;
    padding: 0 10px;
}

.details{
    text-align: left;
    max-width: 90%;
    margin: auto;
}

.title{
    margin: 0.5rem 0;
    font-size: 2rem;
    text-transform: capitalize;
}
.description{
    font-size: 1.1rem;
    color: #828080;

}

.buttonDiv{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 4.5rem;
}

@media (width< 600px){
    .buttonDiv{
        margin-top: 2.5rem;
    }
    
}

.parentChatWithUs {
 
    height: 4rem;
    z-index: 999999999999;
    display: flex;
    align-items: center;
    font-family: Jost;
    font-weight: 800;
    font-size: 1.2rem;
}

.chatwithus{
    width: 12rem;
    height: auto;
    filter: drop-shadow(-5px 3px 3px rgba(0,0,0,0.7));
    transition: all 0.3s ease;
}
.chatwithus:hover{
    scale: 0.98;
}

@media (width<600px){
    .chatwithus{
        width: 8rem;
    filter: drop-shadow(-5px 3px 3px rgba(0,0,0,0.5));

    }
}

